cluster/apps/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app.kubernetes.io/name: wordpress
spec:
  selector:
    app.kubernetes.io/name: wordpress
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
