cluster/apps/wordpress/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress
  labels:
    app.kubernetes.io/name: wordpress
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`${SECRET_DOMAIN_1}`,`www.${SECRET_DOMAIN_1}`)
      middlewares:
        - name: headers@file
        - name: wordpress
          namespace: default
      services:
        - name: wordpress
          port: 80
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME_1}-prod-tls

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: wordpress
  labels:
    app.kubernetes.io/name: wordpress
spec:
  redirectRegex:
    permanent: true
    regex: "https?://www.${SECRET_DOMAIN_1}(.*)"
    replacement: "https://${SECRET_DOMAIN_1}/${1}"
